src/test/ui/compile-fail-migration/regions-infer-invariance-due-to-decl.stderr
error[E0308]: mismatched types
  --> $DIR/regions-infer-invariance-due-to-decl.rs:22:5
   |
LL |     b_isize //~ ERROR mismatched types
   |     ^^^^^^^ lifetime mismatch
   |
   = note: expected type `invariant<'static>`
              found type `invariant<'r>`
note: the lifetime 'r as defined on the function body at 21:23...
  --> $DIR/regions-infer-invariance-due-to-decl.rs:21:23
   |
LL | fn to_longer_lifetime<'r>(b_isize: invariant<'r>) -> invariant<'static> {
   |                       ^^
   = note: ...does not necessarily outlive the static lifetime

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
